name:                hahet
version:             0.0.0.0
synopsis:            The Hahet configuration management system
description:         A framework for writing your server configuration files
                     type-safely in Haskell and apply them to the server as a
                     executable.
homepage:            coming-soon
license:             MIT
license-file:        LICENSE
author:              Samuli Thomasson
maintainer:          samuli.thomasson@paivola.fi
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:  src
  exposed-modules: Hahet
                   Hahet.Core
                   Hahet.Core.Internals
                   Hahet.Core.Execution
                   Hahet.Targets.Packages
                   Hahet.Targets.FileNodes
                   Hahet.Targets.Services
                   Hahet.Modules.DateTimeManager
                   Hahet.Modules.ModNginx
                   Hahet.Modules.SSH

  -- other-modules:       
  build-depends: base                     ==4.6.*
               , text                     ==0.11.*
               , mtl                      ==2.1.*
               , data-default             ==0.5.*
               , containers               ==0.5.*
               , directory                ==1.2.*
               , interpolatedstring-perl6 ==0.9.*
               , shelly                   ==1.3.0.*

  extensions: DeriveDataTypeable
              ExtendedDefaultRules
              FlexibleInstances
              GADTs
              GeneralizedNewtypeDeriving
              MultiParamTypeClasses
              NoImplicitPrelude
              OverloadedStrings
              RankNTypes
              TemplateHaskell
              QuasiQuotes
              TypeFamilies

  ghc-options: -Wall -fno-warn-type-defaults

executable    hahet_test_config
   hs-source-dirs: hahet-example
   main-is:        Main.hs
   -- other-modules:

   build-depends: base, hahet

Test-Suite tests
   hs-source-dirs: tests
   main-is: test.hs
   type:    exitcode-stdio-1.0
   build-depends: base, hahet
   extensions: TypeFamilies
               GeneralizedNewtypeDeriving
               MultiParamTypeClasses
               OverloadedStrings
               FlexibleInstances
               DeriveDataTypeable
               GADTs
               ExtendedDefaultRules
               RankNTypes
               NoImplicitPrelude
